2002-09-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h: Move wide char prototypes together.
	* include/string.h: Untangle wide char protototypes.
	Use C++ c-header compatability defines.
	*include/wchar.h: Copy wide char string prototypes from
	string.h.
	Resync with io.h.
	* include/signal.h: Use C++ c-header compatability defines.
	* include/stdio.h: Add  __HAVE_STD_CXX guard.

2002-09-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h: Reorder ANSI vs non-ANSI declarations
	Use C++ c-header compatability defines.
	* include/wchar.h: Likewise.
	* include/time.h: Use C++ c-header compatability defines.

	* include/tchar.h: ANSI-fy comment.

2002-09-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h: Move _Exit prototype into main C99 block.
	Use C++ c-header compatability defines.

2002-09-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h: Use C++ c-header compatability defines.

	* mingwex/math/fpclassify.c: Add non-underscored alias.
	* mingwex/math/fpclassifyf.c: Likewise.
	* mingwex/math/fpclassifyl.c: Likewise.

2002-09-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/locale.h: Use C++ c-header compatability defines.

2002-09-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__BEGIN_CSTD_NAMESPACE,__END_CSTD_NAMESPACE
	__BEGIN_CGLOBAL_NAMESPACE, __END_CGLOBAL_NAMESPACE, __CSTD,
	__CGLOBAL): Add defines for for ISO C++ c-header compatability. 

	* include/ctype.h: Use C++ c-header compatability defines.
	* include/wctype.h: Likewise.

2002-09-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wchar.h: Don't #include sys/types.h, stdlib.h,
	string.h.
	Guard only non-ANSI names with #ifndef __STRICT_ANSI__,
	* include/stdio.h: Add __STRICT_ANSI__ guard for underscored
	wide char functions and oldnames.
	(__mingw_fseek, __mingw_fwrite): __STRICT_ANSI__ guard.

2002-09-18  Danny Smith  <dannysmith@users.sourceforge.net>
